fix: disable horizontal scroll

--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,8 @@ html, body {
     margin: 0;
     color: #ffffff;
     font-family: 'Helvetica', arial;
+    max-width: 100%;
+    overflow-x: hidden;
 }
 
 hr {
@@ -177,6 +179,7 @@ RIGHT CONTENT
 
 body {
     background-color: #f76160;
+
 }
     #full-size{
   height:100%;
